# ai-langchain-integrated

./: .env.example  .gitignore  README.md  RESTRUCTURE.md  pyproject.toml  requirements.txt
.cursor/rules/: api-patterns.mdc  code-standards.mdc  fastapi.mdc  langchain-0.3.mdc  llm-integration.mdc  mcp-tools.mdc  project-structure.mdc  service-pattern.mdc
docker/: docker-compose-celery.yml
docs/: celery-integration.md  document-formats.md  langchain_0_3_migration.md  langchain_latest_updates.md  quick-start.md
examples/: async_document_processing_example.py  document_processing_example.py
scripts/: celery_flower.py  celery_worker.py  migrate_to_pydantic_v2.py  setup_poetry.bat  setup_poetry.py  setup_poetry.sh  start_all.bat  start_all.py  start_all.sh
src/: main.py
src/api/: router.py
src/celery_app/: __init__.py  celery_app.py  celery_config.py
src/clients/: dify_api_client.py  dify_sdk_client.py
src/config/: brave_search_config.py  config.py  playwright_config.py  settings.py
src/core/: connection_pool.py  exceptions.py  interfaces.py
src/db/: mongodb.py
src/dependencies/: common.py  tools.py
src/factories/: __init__.py  document_loader_factory.py  embedding_factory.py  extended_document_loader_factory.py  llm_factory.py  llm_provider_factory.py  mcp_tool_factory.py  output_parser_factory.py  prompt_factory.py  retriever_factory.py  text_splitter_factory.py  vectorstore_factory.py
src/middlewares/: __init__.py  error_handler.py
src/schemas/: __init__.py  base.py  chat.py  chatbot.py  common.py  llm.py  (+6 more)
tests/: test_document_processing.py
(+59 files in other folders)
