[tool.poetry]
name = "dify-connect"
version = "0.1.0"
description = "连接和管理多种大语言模型(LLM)的服务框架"
authors = ["niko.he"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Web框架
fastapi = "^0.109.0"
uvicorn = "^0.23.2"
pydantic = "^2.6.1"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
python-multipart = "^0.0.6"

# LangChain相关
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
langchain-text-splitters = "^0.3.0"
langgraph = "^0.2.20"

# LLM提供商SDK
openai = "^1.12.0"
tiktoken = ">=0.7,<1"

# 工具类
requests = "^2.31.0"
aiohttp = "^3.8.5"
loguru = "^0.7.2"
pytz = "^2024.1"

# Celery 异步任务
celery = "^5.3.0"
redis = "^4.5.0"
flower = "^2.0.0"
watchdog = "^3.0.0"

# Playwright
playwright = "^1.42.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
